@@ -1,10 +1,5 @@
 # -*- coding: utf-8 -*-
-from .audit import *  # noqa
-from .t2 import *  # noqa
-from .reports import *  # noqa
-from .funds import *  # noqa
-from .partners import *  # noqa
-from .openapi import schema_view, get_schema_view  # noqa
 from .datamart import *  # noqa
 from .system import *  # noqa
-from .tpmtpmvisit import *  # noqa
+from .etools import *  # noqa
+from .openapi import schema_view  # noqa
