@@ -1,6 +1,8 @@
 1.4 (dev)
 ---------
-*
+* updates corepai documentation
+* refactor api endpoints
+* updates dependencies
 
 
 1.3
